feat: add definitions for admin services
