# shared/protogen/ts/backend/admin/ServerManager_pb.ts
@@ -2,13 +2,331 @@
 // @generated from file backend/admin/ServerManager.proto (package backend_admin, syntax proto3)
 /* eslint-disable */
 
-import type { GenFile } from "@bufbuild/protobuf/codegenv2";
-import { fileDesc } from "@bufbuild/protobuf/codegenv2";
+import type { GenFile, GenMessage, GenService } from "@bufbuild/protobuf/codegenv2";
+import { fileDesc, messageDesc, serviceDesc } from "@bufbuild/protobuf/codegenv2";
+import type { Pagination, ResourceLimit } from "../../common_pb";
 import { file_common } from "../../common_pb";
+import type { Message } from "@bufbuild/protobuf";
 
 /**
  * Describes the file backend/admin/ServerManager.proto.
  */
 export const file_backend_admin_ServerManager: GenFile = /*@__PURE__*/
-  fileDesc("CiFiYWNrZW5kL2FkbWluL1NlcnZlck1hbmFnZXIucHJvdG8SDWJhY2tlbmRfYWRtaW5CJVojcGFuZWxpdW0vcHJvdG9fZ2VuX2dvL2JhY2tlbmQvYWRtaW5iBnByb3RvMw", [file_common]);
+  fileDesc("CiFiYWNrZW5kL2FkbWluL1NlcnZlck1hbmFnZXIucHJvdG8SDWJhY2tlbmRfYWRtaW4iuAEKBlNlcnZlchILCgNzaWQYASABKAkSDAoEbmFtZRgCIAEoCRITCgtkZXNjcmlwdGlvbhgDIAEoCRIRCglvd25lcl91aWQYBCABKAkSCwoDbmlkGAUgASgJEgwKBHVpZHMYBiADKAkSLQoOcmVzb3VyY2VfbGltaXQYByABKAsyFS5jb21tb24uUmVzb3VyY2VMaW1pdBIUCgxkb2NrZXJfaW1hZ2UYCCABKAkSCwoDYmlkGAkgASgJItcBChFHZXRTZXJ2ZXJzUmVxdWVzdBImCgpwYWdpbmF0aW9uGAEgASgLMhIuY29tbW9uLlBhZ2luYXRpb24SEAoDbmlkGAIgASgJSACIAQESFgoJb3duZXJfdWlkGAMgASgJSAGIAQESEAoDYmlkGAQgASgJSAKIAQESFwoKYWNjZXNzX3VpZBgFIAEoCUgDiAEBEhAKA3VpZBgGIAEoCUgEiAEBQgYKBF9uaWRCDAoKX293bmVyX3VpZEIGCgRfYmlkQg0KC19hY2Nlc3NfdWlkQgYKBF91aWQiZAoSR2V0U2VydmVyc1Jlc3BvbnNlEiYKB3NlcnZlcnMYASADKAsyFS5iYWNrZW5kX2FkbWluLlNlcnZlchImCgpwYWdpbmF0aW9uGAIgASgLMhIuY29tbW9uLlBhZ2luYXRpb24iHwoQR2V0U2VydmVyUmVxdWVzdBILCgNzaWQYASABKAkiOgoRR2V0U2VydmVyUmVzcG9uc2USJQoGc2VydmVyGAEgASgLMhUuYmFja2VuZF9hZG1pbi5TZXJ2ZXIiPAoTQ3JlYXRlU2VydmVyUmVxdWVzdBIlCgZzZXJ2ZXIYASABKAsyFS5iYWNrZW5kX2FkbWluLlNlcnZlciInChRDcmVhdGVTZXJ2ZXJSZXNwb25zZRIPCgdzdWNjZXNzGAEgASgIIjwKE1VwZGF0ZVNlcnZlclJlcXVlc3QSJQoGc2VydmVyGAEgASgLMhUuYmFja2VuZF9hZG1pbi5TZXJ2ZXIiJwoUVXBkYXRlU2VydmVyUmVzcG9uc2USDwoHc3VjY2VzcxgBIAEoCCIiChNEZWxldGVTZXJ2ZXJSZXF1ZXN0EgsKA3NpZBgBIAEoCSInChREZWxldGVTZXJ2ZXJSZXNwb25zZRIPCgdzdWNjZXNzGAEgASgIMsQDChRTZXJ2ZXJNYW5hZ2VyU2VydmljZRJRCgpHZXRTZXJ2ZXJzEiAuYmFja2VuZF9hZG1pbi5HZXRTZXJ2ZXJzUmVxdWVzdBohLmJhY2tlbmRfYWRtaW4uR2V0U2VydmVyc1Jlc3BvbnNlEk4KCUdldFNlcnZlchIfLmJhY2tlbmRfYWRtaW4uR2V0U2VydmVyUmVxdWVzdBogLmJhY2tlbmRfYWRtaW4uR2V0U2VydmVyUmVzcG9uc2USVwoMQ3JlYXRlU2VydmVyEiIuYmFja2VuZF9hZG1pbi5DcmVhdGVTZXJ2ZXJSZXF1ZXN0GiMuYmFja2VuZF9hZG1pbi5DcmVhdGVTZXJ2ZXJSZXNwb25zZRJXCgxVcGRhdGVTZXJ2ZXISIi5iYWNrZW5kX2FkbWluLlVwZGF0ZVNlcnZlclJlcXVlc3QaIy5iYWNrZW5kX2FkbWluLlVwZGF0ZVNlcnZlclJlc3BvbnNlElcKDERlbGV0ZVNlcnZlchIiLmJhY2tlbmRfYWRtaW4uRGVsZXRlU2VydmVyUmVxdWVzdBojLmJhY2tlbmRfYWRtaW4uRGVsZXRlU2VydmVyUmVzcG9uc2VCJVojcGFuZWxpdW0vcHJvdG9fZ2VuX2dvL2JhY2tlbmQvYWRtaW5iBnByb3RvMw", [file_common]);
+
+/**
+ * @generated from message backend_admin.Server
+ */
+export type Server = Message<"backend_admin.Server"> & {
+  /**
+   * ignored with Create
+   *
+   * @generated from field: string sid = 1;
+   */
+  sid: string;
+
+  /**
+   * @generated from field: string name = 2;
+   */
+  name: string;
+
+  /**
+   * @generated from field: string description = 3;
+   */
+  description: string;
+
+  /**
+   * @generated from field: string owner_uid = 4;
+   */
+  ownerUid: string;
+
+  /**
+   * @generated from field: string nid = 5;
+   */
+  nid: string;
+
+  /**
+   * @generated from field: repeated string uids = 6;
+   */
+  uids: string[];
+
+  /**
+   * @generated from field: common.ResourceLimit resource_limit = 7;
+   */
+  resourceLimit?: ResourceLimit;
+
+  /**
+   * @generated from field: string docker_image = 8;
+   */
+  dockerImage: string;
+
+  /**
+   * @generated from field: string bid = 9;
+   */
+  bid: string;
+};
+
+/**
+ * Describes the message backend_admin.Server.
+ * Use `create(ServerSchema)` to create a new message.
+ */
+export const ServerSchema: GenMessage<Server> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 0);
+
+/**
+ * @generated from message backend_admin.GetServersRequest
+ */
+export type GetServersRequest = Message<"backend_admin.GetServersRequest"> & {
+  /**
+   * @generated from field: common.Pagination pagination = 1;
+   */
+  pagination?: Pagination;
+
+  /**
+   * filter by node ID
+   *
+   * @generated from field: optional string nid = 2;
+   */
+  nid?: string;
+
+  /**
+   * filter by owner user ID
+   *
+   * @generated from field: optional string owner_uid = 3;
+   */
+  ownerUid?: string;
+
+  /**
+   * filter by blueprint ID
+   *
+   * @generated from field: optional string bid = 4;
+   */
+  bid?: string;
+
+  /**
+   * filter by user ID with access
+   *
+   * @generated from field: optional string access_uid = 5;
+   */
+  accessUid?: string;
+
+  /**
+   * filter by user ID (either owner or with access)
+   *
+   * @generated from field: optional string uid = 6;
+   */
+  uid?: string;
+};
+
+/**
+ * Describes the message backend_admin.GetServersRequest.
+ * Use `create(GetServersRequestSchema)` to create a new message.
+ */
+export const GetServersRequestSchema: GenMessage<GetServersRequest> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 1);
+
+/**
+ * @generated from message backend_admin.GetServersResponse
+ */
+export type GetServersResponse = Message<"backend_admin.GetServersResponse"> & {
+  /**
+   * @generated from field: repeated backend_admin.Server servers = 1;
+   */
+  servers: Server[];
+
+  /**
+   * @generated from field: common.Pagination pagination = 2;
+   */
+  pagination?: Pagination;
+};
+
+/**
+ * Describes the message backend_admin.GetServersResponse.
+ * Use `create(GetServersResponseSchema)` to create a new message.
+ */
+export const GetServersResponseSchema: GenMessage<GetServersResponse> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 2);
+
+/**
+ * @generated from message backend_admin.GetServerRequest
+ */
+export type GetServerRequest = Message<"backend_admin.GetServerRequest"> & {
+  /**
+   * @generated from field: string sid = 1;
+   */
+  sid: string;
+};
+
+/**
+ * Describes the message backend_admin.GetServerRequest.
+ * Use `create(GetServerRequestSchema)` to create a new message.
+ */
+export const GetServerRequestSchema: GenMessage<GetServerRequest> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 3);
+
+/**
+ * @generated from message backend_admin.GetServerResponse
+ */
+export type GetServerResponse = Message<"backend_admin.GetServerResponse"> & {
+  /**
+   * @generated from field: backend_admin.Server server = 1;
+   */
+  server?: Server;
+};
+
+/**
+ * Describes the message backend_admin.GetServerResponse.
+ * Use `create(GetServerResponseSchema)` to create a new message.
+ */
+export const GetServerResponseSchema: GenMessage<GetServerResponse> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 4);
+
+/**
+ * @generated from message backend_admin.CreateServerRequest
+ */
+export type CreateServerRequest = Message<"backend_admin.CreateServerRequest"> & {
+  /**
+   * @generated from field: backend_admin.Server server = 1;
+   */
+  server?: Server;
+};
+
+/**
+ * Describes the message backend_admin.CreateServerRequest.
+ * Use `create(CreateServerRequestSchema)` to create a new message.
+ */
+export const CreateServerRequestSchema: GenMessage<CreateServerRequest> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 5);
+
+/**
+ * @generated from message backend_admin.CreateServerResponse
+ */
+export type CreateServerResponse = Message<"backend_admin.CreateServerResponse"> & {
+  /**
+   * @generated from field: bool success = 1;
+   */
+  success: boolean;
+};
+
+/**
+ * Describes the message backend_admin.CreateServerResponse.
+ * Use `create(CreateServerResponseSchema)` to create a new message.
+ */
+export const CreateServerResponseSchema: GenMessage<CreateServerResponse> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 6);
+
+/**
+ * @generated from message backend_admin.UpdateServerRequest
+ */
+export type UpdateServerRequest = Message<"backend_admin.UpdateServerRequest"> & {
+  /**
+   * @generated from field: backend_admin.Server server = 1;
+   */
+  server?: Server;
+};
+
+/**
+ * Describes the message backend_admin.UpdateServerRequest.
+ * Use `create(UpdateServerRequestSchema)` to create a new message.
+ */
+export const UpdateServerRequestSchema: GenMessage<UpdateServerRequest> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 7);
+
+/**
+ * @generated from message backend_admin.UpdateServerResponse
+ */
+export type UpdateServerResponse = Message<"backend_admin.UpdateServerResponse"> & {
+  /**
+   * @generated from field: bool success = 1;
+   */
+  success: boolean;
+};
+
+/**
+ * Describes the message backend_admin.UpdateServerResponse.
+ * Use `create(UpdateServerResponseSchema)` to create a new message.
+ */
+export const UpdateServerResponseSchema: GenMessage<UpdateServerResponse> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 8);
+
+/**
+ * @generated from message backend_admin.DeleteServerRequest
+ */
+export type DeleteServerRequest = Message<"backend_admin.DeleteServerRequest"> & {
+  /**
+   * @generated from field: string sid = 1;
+   */
+  sid: string;
+};
+
+/**
+ * Describes the message backend_admin.DeleteServerRequest.
+ * Use `create(DeleteServerRequestSchema)` to create a new message.
+ */
+export const DeleteServerRequestSchema: GenMessage<DeleteServerRequest> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 9);
+
+/**
+ * @generated from message backend_admin.DeleteServerResponse
+ */
+export type DeleteServerResponse = Message<"backend_admin.DeleteServerResponse"> & {
+  /**
+   * @generated from field: bool success = 1;
+   */
+  success: boolean;
+};
+
+/**
+ * Describes the message backend_admin.DeleteServerResponse.
+ * Use `create(DeleteServerResponseSchema)` to create a new message.
+ */
+export const DeleteServerResponseSchema: GenMessage<DeleteServerResponse> = /*@__PURE__*/
+  messageDesc(file_backend_admin_ServerManager, 10);
+
+/**
+ * @generated from service backend_admin.ServerManagerService
+ */
+export const ServerManagerService: GenService<{
+  /**
+   * @generated from rpc backend_admin.ServerManagerService.GetServers
+   */
+  getServers: {
+    methodKind: "unary";
+    input: typeof GetServersRequestSchema;
+    output: typeof GetServersResponseSchema;
+  },
+  /**
+   * @generated from rpc backend_admin.ServerManagerService.GetServer
+   */
+  getServer: {
+    methodKind: "unary";
+    input: typeof GetServerRequestSchema;
+    output: typeof GetServerResponseSchema;
+  },
+  /**
+   * @generated from rpc backend_admin.ServerManagerService.CreateServer
+   */
+  createServer: {
+    methodKind: "unary";
+    input: typeof CreateServerRequestSchema;
+    output: typeof CreateServerResponseSchema;
+  },
+  /**
+   * @generated from rpc backend_admin.ServerManagerService.UpdateServer
+   */
+  updateServer: {
+    methodKind: "unary";
+    input: typeof UpdateServerRequestSchema;
+    output: typeof UpdateServerResponseSchema;
+  },
+  /**
+   * @generated from rpc backend_admin.ServerManagerService.DeleteServer
+   */
+  deleteServer: {
+    methodKind: "unary";
+    input: typeof DeleteServerRequestSchema;
+    output: typeof DeleteServerResponseSchema;
+  },
+}> = /*@__PURE__*/
+  serviceDesc(file_backend_admin_ServerManager, 0);
 
